練習自製元件 and laravel-admin tree

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "encore/laravel-admin": "1.7.3",
+        "encore/laravel-admin": "1.7.7",
         "fideloper/proxy": "^4.0",
+        "laravel-admin-ext/media-player": "^1.1",
         "laravel-admin-ext/summernote": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
