--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel-admin-ext/media-player": "^1.1",
         "laravel-admin-ext/summernote": "^1.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "phpoffice/phpword": "^0.17.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
