--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.1.3",
         "encore/laravel-admin": "1.7.7",
         "fideloper/proxy": "^4.0",
+        "laravel-admin-ext/media-manager": "^1.1",
         "laravel-admin-ext/media-player": "^1.1",
         "laravel-admin-ext/summernote": "^1.0",
+        "laravel-admin/media-manager": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "phpoffice/phpword": "^0.17.0"
@@ -40,6 +42,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/Helpers/helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
